FindBugs: Call Boolean.valueOf() instead of new Boolean(). Removed unused method.